# ESVO_extension

./: .gitignore  Doxyfile  README.md
camera_models/: CMakeLists.txt  package.xml
camera_models/include/camodocal/camera_models/: Camera.h  PinholeCamera.h
camera_models/src/camera_models/: PinholeCamera.cc
cartesian3dgrid/: CMakeLists.txt  package.xml
cartesian3dgrid/include/cartesian3dgrid/: cartesian3dgrid.h
cartesian3dgrid/src/: cartesian3dgrid.cpp
esvo_core/: CMakeLists.txt  esvo_EMVS.perspective  esvo_monosystem.perspective  esvo_monosystem.rviz  esvo_mvsmono.perspective  esvo_mvsmono.rviz  esvo_mvstereo.perspective  esvo_mvstereo.rviz  esvo_system.perspective  esvo_system.rviz  event_lidar_fusion.rviz  package.xml  tracking.perspective  tracking.rviz
esvo_core/calib/rpg/: left_pinhole.yaml  right.yaml
esvo_core/calib/rpg_mono/: left.yaml  right.yaml
esvo_core/calib/rpg_simu/: right.yaml
esvo_core/calib/rpg_slider/: left.yaml
esvo_core/calib/rpg_stereo/: extrinsics.yaml
esvo_core/calib/simu/: left.yaml  right.yaml
esvo_core/calib/upenn/: extrinsics.yaml  left_pinhole.yaml
esvo_core/cfg/lidardepthmap/: lidardepthmap_upenn.yaml
esvo_core/cfg/mapping/: mapping_rpg.yaml  mapping_rpg_stereo.yaml  mapping_simu.yaml  mapping_upenn.yaml
esvo_core/cfg/monomapping/: mapping_hkust.yaml  mapping_rpg.yaml  mapping_rpg_simu.yaml
esvo_core/cfg/mvsmono/: mvsmono_rpg.yaml  mvsmono_rpg_mono.yaml  mvsmono_rpg_simu.yaml  mvsmono_rpg_slider.yaml  mvsmono_rpg_stereo.yaml  mvsmono_simu.yaml
esvo_core/cfg/mvstereo/: mvstereo_rpg.yaml  mvstereo_rpg_stereo.yaml
esvo_core/cfg/tracking/: tracking_rpg.yaml  tracking_rpg_simu.yaml  tracking_rpg_stereo.yaml  tracking_simu.yaml  tracking_upenn.yaml
esvo_core/include/emvs_core/: DepthVector.hpp  MapperEMVS.hpp  MedianFilter.hpp  Trajectory.hpp
esvo_core/include/esvo_core/: LiDARDepthMap.h  Tracking.h  estimator.h  esvo_MVSMono.h  esvo_MVStereo.h  esvo_MVStereo_DM.h  esvo_Mapping.h  esvo_Mapping_DM.h  esvo_MonoMapping.h  esvo_MonoTracking.h  esvo_Tracking.h
esvo_core/include/esvo_core/container/: CameraSystem.h  CameraSystemMono.h  DepthMap.h  DepthPoint.h  EventDepth.h  SensorSystem.h  SmartGrid.h  TimeSurfaceObservation.h
esvo_core/include/esvo_core/core/: DepthMonoFusion.h  DepthMonoRegularization.h  DepthProblem.h  DepthProblemConfig.h  EventBM.h  EventBM_DM.h  InitialMotionEstimator.h  RegProblemLM.h  RegProblemSolverLM.h
esvo_core/include/esvo_core/tools/: Trajectory.hpp  utils.h
esvo_core/include/initial/: InitialMotionEstimator.h  ModelSelector.h  MonoInitializer.h  feature_manager.h  initial_sfm.h  solve_5pts.h
esvo_core/launch/monosystem/: monosystem_hkust.launch  monosystem_rpg_simu.launch  monosystem_rpg_stereo.launch  monosystem_simu.launch
esvo_core/launch/mvsmono/: mvsmono_rpg.launch  mvsmono_rpg_mono.launch  mvsmono_rpg_simu.launch  mvsmono_rpg_slider.launch  mvsmono_rpg_stereo.launch  mvsmono_simu.launch  mvsmono_upenn.launch
esvo_core/launch/mvstereo/: mvstereo_rpg.launch  mvstereo_rpg_stereo.launch
esvo_core/launch/system/: system_estimator.launch  system_estimator_rpg.launch  system_estimator_upen.launch  system_rpg.launch  system_rpg_stereo.launch  system_simu.launch  system_upenn.launch
esvo_core/launch/tracking/: tracking_rpg_simu.launch  tracking_rpg_stereo.launch  tracking_simu.launch
esvo_core/launch/tracking_cvprw/: monotracking_rpg_mono.launch  monotracking_rpg_simu.launch  monotracking_rpg_stereo.launch
esvo_core/script/: fn_constants.py  run_esvo.py  test_rpg_stereo.sh  test_upenn.sh
esvo_core/src/: LiDARDepthMap.cpp  LiDARDepthMapNode.cpp  Tracking.cpp  TrackingNode.cpp  estimator.cpp  estimator_node.cpp  esvo_MVSMono.cpp  esvo_MVSMonoNode.cpp  esvo_MVStereo.cpp  esvo_MVStereoNode_DM.cpp  esvo_MVStereo_DM.cpp  esvo_Mapping.cpp  esvo_MappingNode_DM.cpp  esvo_Mapping_DM.cpp  esvo_MonoMapping.cpp  esvo_MonoMappingNode.cpp  esvo_MonoTracking.cpp  esvo_MonoTrackingNode.cpp  esvo_Tracking.cpp  publishMap.cpp  saveMap.cpp
esvo_core/src/container/: CameraSystem.cpp  CameraSystemMono.cpp  DepthPoint.cpp  SensorSystem.cpp
esvo_core/src/core/: DepthFusion.cpp  DepthMonoFusion.cpp  DepthMonoRegularization.cpp  DepthProblem.cpp  DepthProblemSolver.cpp  DepthRegularization.cpp  EventBM.cpp  EventBM_DM.cpp  InitialMotionEstimator.cpp  RegProblemLM.cpp  RegProblemSolverLM.cpp
esvo_core/src/emvs_core/: MapperEMVS.cpp  MedianFilter.cpp
esvo_core/src/initial/: InitialMotionEstimator.cpp  ModelSelector.cpp  MonoInitializer.cpp  feature_manager.cpp  initial_sfm.cpp  solve_5pts.cpp
esvo_core/test/: test_key_event_processing.cpp  test_key_mapping.cpp  test_key_tracking.cpp  test_transform.cpp
esvo_time_surface/: CMakeLists.txt
esvo_time_surface/cfg/: parameters.yaml
esvo_time_surface/include/esvo_time_surface/: TimeSurface.h
esvo_time_surface/launch/: mono_time_surface.launch  stereo_time_surface.launch
esvo_time_surface/launch/rosbag_launcher/hkust/: hkust_lab.launch
esvo_time_surface/launch/rosbag_launcher/rpg/: rpg_bin.launch  rpg_boxes.launch  rpg_desk.launch  rpg_monitor.launch
esvo_time_surface/launch/rosbag_launcher/rpg_mono/: rpg_boxes_6dof.launch  rpg_dynamic_6dof.launch
esvo_time_surface/launch/rosbag_launcher/rpg_simu/: rpg_checkerboard_6dof.launch  rpg_office_6dof.launch  rpg_shapes_poster_6dof.launch
esvo_time_surface/launch/rosbag_launcher/rpg_slider/: rpg_slider_depth.launch  rpg_slider_far.launch
esvo_time_surface/launch/rosbag_launcher/rpg_stereo/: rpg_boxes.launch  rpg_desk.launch  rpg_stereo_monitor.launch
esvo_time_surface/launch/rosbag_launcher/upenn/: upenn_indoor_flying1.launch  upenn_indoor_flying3.launch
esvo_time_surface/src/: TimeSurface.cpp  TimeSurface_global_timer.cpp
events_repacking_helper/: CMakeLists.txt  README.md
events_repacking_helper/launch/: repacking.launch
events_repacking_helper/script/: extract_topics.py  ijrr_rpg_bag_edited.sh  merge.py  simu_bag_edited.sh  simu_rpg_bag_edited.sh
events_repacking_helper/src/: EventMessageEditor.cpp  EventMessageEditor_Mono.cpp
